--- a/Spark_Twitter_Analysis.ipynb
+++ b/Spark_Twitter_Analysis.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__Michael Woo & Swapnil Basu__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "__Imports__"
    ]
   },
@@ -180,7 +187,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Selecting the target value and text__"
+    "__Selecting the target value and text__\n",
+    "\n",
+    "These are the values that we believe are important in predicting whether a tweet was negative or positive"
    ]
   },
   {
@@ -301,7 +310,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Stop Words Download from NLTK__"
+    "__Stop Words Download from NLTK__\n",
+    "\n",
+    "Downloads Stop words"
    ]
   },
   {
@@ -699,7 +710,7 @@
    "source": [
     "__Twitter Streaming Tweets__\n",
     "\n",
-    "We can set the limit of tweet samples to 10 and where the streaming only streams tweets that are in english"
+    "We can set the limit of tweet samples to 100 and where the streaming only streams tweets that are in english"
    ]
   },
   {
@@ -1402,13 +1413,6 @@
     "for x in mydoc:\n",
     "    print(x)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
